tests/error/misc_errors/extern_bad_type.err
Error: Non-parametric type (at $FILE:10:0)
   | 
 8 | module = GuppyModule("test")
 9 | 
10 | guppy.extern("x", ty="float[int]", module=module)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Type `float` is not parametric

Guppy compilation failed due to 1 previous error
